--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+.dinner-top{
+  width: 100%;
+}
+
 .dinner-life{
-  width: 1320px
+  /* width: 1320px */
   height: 600px;
   border: 2px solid red;
   display: flex;
@@ -18,3 +22,45 @@
 margin: 70px;
 
 }
+.content-full{
+  width: 100%;
+  border: 2px solid green;
+  margin-top: 20px;
+}
+
+.content{
+  /* width: 1320px; */
+  height: 600px;
+  border: 2px solid green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    }
+
+ .content-one{
+  width: 100px;
+  border: 2px solid green;
+   margin: 20px;
+ }
+
+ .content-two{
+  width: 660px;
+  border: 2px solid green;
+   margin: 20px;
+ }
+
+ .file{
+  height: 400px;
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+ }
+ .file-one{
+margin: 20px;
+text-align: right;
+ }
+ .file-two{
+  margin: 20px;
+ }
